# isaui-discord-logger-rs

./: Cargo.toml
src/: discord_logger.rs  main.rs  mod.rs
