[package]
name = "isaui-discord-logger-rs"
authors = ["Isa <isadestroyed17@gmail.com>"]
description = "A Discord logger for Rust applications"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.8"